--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">Marketplace</string>
     <string name="search_products">Что ищем?</string>
     <string name="add_to_cart">Добавить в корзину</string>
-    <string name="added_to_cart">%1$s добавлены в корзину</string>
+    <string name="added_to_cart">%1$s добавлен в корзину</string>
     <string name="price_format">$%1$.2f</string>
     <string name="back">Назад</string>
     <string name="dismiss">Отмена</string>
     <string name="search">Поиск</string>
+    <string name="searchbar_description">Введите слово в поисковую строку</string>
+    <string name="add_product_to_cart">Добавить %1$s в корзину</string>
 </resources>
